--- a/soi2024.ipynb
+++ b/soi2024.ipynb
@@ -1062,8 +1062,8 @@
     "df2_imputed = pd.DataFrame(imputer.fit_transform(df2), columns=df2.columns)\n",
     "scaler = StandardScaler()\n",
     "scaled_features2 = scaler.fit_transform(df2_imputed)\n",
-    "pred = model.predict(scaled_features2)\n",
-    "print(pred)"
+    "pred1 = model.predict(scaled_features2)\n",
+    "print(pred1)"
    ]
   }
  ],
